HE creado el ccomponente notfound y he estado actualizando css y html

--- a/src/app/componentes/contacto/contacto.component.html
+++ b/src/app/componentes/contacto/contacto.component.html
@@ -1,81 +1,107 @@
 <app-nabvar></app-nabvar>
 <body>
 
-    
+  <main id="main">
   
-    <main id="main">
-  
-      <!-- ======= Breadcrumbs ======= -->
+    <!-- ======= Breadcrumbs ======= -->
     <!-- End Breadcrumbs -->
   
-      <!-- ======= Contact Section ======= -->
-      <div class="map-section">
-        <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
-      </div>
+    <!-- ======= Contact Section ======= -->
+    <div class="map-section">
+      <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
+    </div>
   
-      <section id="contact" class="contact">
-        <div class="container">
+    <section id="contact" class="contact">
+      <div class="container">
   
-          <div class="row justify-content-center" data-aos="fade-up">
+        <div class="row justify-content-center" data-aos="fade-up">
   
-            <div class="col-lg-10">
-  
-              <div class="info-wrap">
-                <div class="row">
-                  <div class="col-lg-4 info">
-                    <i class="bi bi-geo-alt"></i>
-                    <h4>Localzación:</h4>
-                    <p>C/ de l'Arxiduc Carles, 2, 11, <br>Patraix, 46018 València</p>
-                  </div>
-  
-                  <div class="col-lg-4 info mt-4 mt-lg-0">
-                    <i class="bi bi-envelope"></i>
-                    <h4>Email:</h4>
-                    <p>Bytebazaargmail.com
-                  </div>
-  
-                  <div class="col-lg-4 info mt-4 mt-lg-0">
-                    <i class="bi bi-phone"></i>
-                    <h4>Teléfono:</h4>
-                    <p>944232287<br>681356254</p>
-                  </div>
-                </div>
-              </div>
-  
+          <div class="col-lg-6">
+            <!-- Contenido de la columna izquierda -->
+            <div class="info-wrap">
+              <h3>Equipo de Trabajo</h3>
+              <p>
+                En nuestra tienda de tecnología, cada miembro del equipo aporta conocimientos y habilidades únicas para ofrecer una experiencia excepcional a los clientes. Trabajamos en conjunto para mantenernos actualizados en un campo en constante evolución y para brindar un servicio que inspire confianza y fidelidad. Nuestra diversidad fortalece nuestra capacidad para satisfacer las necesidades tecnológicas de todos nuestros clientes. Juntos, impulsamos el éxito de la tienda y promovemos la innovación en el mundo de la tecnología.</p>
             </div>
-  
           </div>
   
-          <div class="row mt-5 justify-content-center" data-aos="fade-up">
-            <div class="col-lg-10">
-              <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-                <div class="row">
-                  <div class="col-md-6 form-group">
-                    <input type="text" name="name" class="form-control" id="name" placeholder="Tu Nombre" required>
-                  </div>
-                  <div class="col-md-6 form-group mt-3 mt-md-0">
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Tu Email" required>
-                  </div>
+          <div class="col-lg-6">
+            <!-- Contenido de la columna derecha -->
+            <div class="info-wrap">
+              <img src="assets/img/empleados.jpg" alt="Equipo de Trabajo">
+            </div>
+          </div>
+  
+        </div>
+  
+      </div>
+    </section><!-- End Contact Section -->
+  
+    <!-- Resto del contenido -->
+  
+    <section id="contacto2" class="contact">
+      <div class="container">
+  
+        <div class="row justify-content-center" data-aos="fade-up">
+  
+          <div class="col-lg-10">
+  
+            <div class="info-wrap">
+              <div class="row">
+                <div class="col-lg-4 info">
+                  <i class="bi bi-geo-alt"></i>
+                  <h4>Localzación:</h4>
+                  <p>C/ de l'Arxiduc Carles, 2, 11, <br>Patraix, 46018 València</p>
                 </div>
-                <div class="form-group mt-3">
-                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Asunto" required>
+  
+                <div class="col-lg-4 info mt-4 mt-lg-0">
+                  <i class="bi bi-envelope"></i>
+                  <h4>Email:</h4>
+                  <p>Bytebazaargmail.com</p> <!-- Aquí agregué el cierre de la etiqueta p -->
                 </div>
-                <div class="form-group mt-3">
-                  <textarea class="form-control" name="message" rows="5" placeholder="Mensaje" required></textarea>
+  
+                <div class="col-lg-4 info mt-4 mt-lg-0">
+                  <i class="bi bi-phone"></i>
+                  <h4>Teléfono:</h4>
+                  <p>944232287<br>681356254</p>
                 </div>
-                <div class="my-3">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Su mensaje fue enviado!</div>
-                </div>
-                <div class="text-center"><button type="submit">Enviar Mensaje</button></div>
-              </form>
+              </div>
             </div>
   
           </div>
   
         </div>
-      </section><!-- End Contact Section -->
   
-    </main><!-- End #main -->
+        <div class="row mt-5 justify-content-center" data-aos="fade-up">
+          <div class="col-lg-10">
+            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+              <div class="row">
+                <div class="col-md-6 form-group">
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Tu Nombre" required>
+                </div>
+                <div class="col-md-6 form-group mt-3 mt-md-0">
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Tu Email" required>
+                </div>
+              </div>
+              <div class="form-group mt-3">
+                <input type="text" class="form-control" name="subject" id="subject" placeholder="Asunto" required>
+              </div>
+              <div class="form-group mt-3">
+                <textarea class="form-control" name="message" rows="5" placeholder="Mensaje" required></textarea>
+              </div>
+              <div class="my-3">
+                <div class="loading">Loading</div>
+                <div class="error-message"></div>
+                <div class="sent-message">Su mensaje fue enviado!</div>
+              </div>
+              <div class="text-center"><button type="submit">Enviar Mensaje</button></div>
+            </form>
+          </div>
   
+        </div>
+  
+      </div>
+    </section><!-- End Contact Section -->
+  
+  </main><!-- End #main -->
+  </body>
