--- a/src/app/componentes/carrito/carrito.component.css
+++ b/src/app/componentes/carrito/carrito.component.css
@@ -78,5 +78,7 @@ tfoot td {
 }
 
 .btn-submit:hover {
-    background-color: rgba(234, 181, 27, 0.87);
+    background-color: rgb(27, 189, 54);
 }
+
+
