--- a/src/app/componentes/login/login.component.css
+++ b/src/app/componentes/login/login.component.css
@@ -1,3 +1,10 @@
+body {
+  background-image: url(fondo.jpg);
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f9f9f9;
+}
 .contenedor{
   width: 100%;
 
