--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,65 +1,21 @@
 <app-nabvar></app-nabvar>
 
-<section id="hero">
-    <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
-  
-      <div class="carousel-inner" role="listbox">
-  
-        <!-- Slide 1 -->
-        <div class="carousel-item active" style="background-image: url(assets/img/slide/slide-2-2.jpg);">
-          <div class="carousel-container">
-    
-          </div>
-        </div>
-  
-        <!-- Slide 2 -->
-        <div class="carousel-item" style="background-image: url(assets/img/slide/slide-3-3.jpg);">
-          <div class="carousel-container">
-          
-          </div>
-        </div>
-  
-        <!-- Slide 3 -->
-        <div class="carousel-item" style="background-image: url(assets/img/slide/slide-3.jpg);">
-          
-          
-        </div>
-  
-      </div>
-  
-      <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
-      </a>
-  
-      <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
-        <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
-      </a>
-  
-      <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
-  
-    </div>
-  </section><!-- End Hero -->
 
-
+<body>
   <form class="formulario">
-    <h1>INICIAR SESIÓN</h1>
-    <div class="contenedor">
-
-
-
-        <div class="input-contenedor">
-            <i class="fas fa-envelope icon"></i>
-            <input type="text" placeholder="Correo Electronico o Nombre de Usuario">
-
-        </div>
-
-        <div class="input-contenedor">
-            <i class="fas fa-key icon"></i>
-            <input type="password" placeholder="Contraseña">
-
-        </div>
-        <input type="submit" value="INICIAR SESIÓN" class="button">
-
-        <p>¿No tienes una cuenta? <a class="nav-link" routerLink="/registro">Registrar</a></p>
-    </div>
-</form>
+      <h1>INICIAR SESIÓN</h1>
+      <div class="contenedor">
+          <div class="input-contenedor">
+              <i class="fas fa-envelope icon"></i>
+              <input type="text" placeholder="Correo Electronico o Nombre de Usuario">
+          </div>
+          <div class="input-contenedor">
+              <i class="fas fa-key icon"></i>
+              <input type="password" placeholder="Contraseña">
+          </div>
+          <input type="submit" value="INICIAR SESIÓN" class="button">
+          <p>¿No tienes una cuenta? <a href="/registro">Registrarse</a></p>
+      </div>
+  </form>
+  
+</body>
