--- a/src/app/componentes/registro/registro.component.html
+++ b/src/app/componentes/registro/registro.component.html
@@ -35,7 +35,7 @@
         <input type="checkbox"  name="Edad" class="Edad"> Certifico que soy mayor de 18 años.
         <input type="submit" value="Registrarse" class="button">
         <p>Al registrarte, aceptas nuestras condiciones de uso y política de privacidad.</p>
-        <p>¿Ya tienes una cuenta?<a class="link" routerLink="/login">Iniciar Sesión</a></p>
+        <p>¿Ya tienes una cuenta?<a href="/login">Iniciar Sesión</a></p>
     </div>
 
 </form>
