--- a/src/app/componentes/nabvar/nabvar.component.html
+++ b/src/app/componentes/nabvar/nabvar.component.html
@@ -8,7 +8,7 @@
       <ul>
         <li><a class="nav-link" routerLink="/home" >Home</a></li>
         <li class="dropdown">
-          <a><span>Catálogo</span> <i class="bi bi-chevron-down"></i></a>
+          <a class="nav-link" routerLink="/catalogo"><span>Catálogo</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a class="nav-link" routerLink="/moviles">Móviles</a></li>
             <li><a class="nav-link" routerLink="/relojes">Relojes</a></li>
@@ -34,7 +34,7 @@
   <ul>
     <li><a class="nav-link" routerLink="/home" >Home</a></li>
     <li class="dropdown">
-      <a><span>Catálogo</span> <i class="bi bi-chevron-down"></i></a>
+      <a class="nav-link" routerLink="/catalogo"><span>Catálogo</span> <i class="bi bi-chevron-down"></i></a>
       <ul>
         <li><a class="nav-link" routerLink="/moviles">Móviles</a></li>
         <li><a class="nav-link" routerLink="/relojes">Relojes</a></li>
