--- a/src/app/componentes/catalogo/moviles/moviles.component.css
+++ b/src/app/componentes/catalogo/moviles/moviles.component.css
@@ -1,86 +1,10 @@
-.pagina-producto-container {
-    display: flex;
-    justify-content: space-between;
-    margin: 20px;
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  background-color: #000000; /* Cambia el color de fondo a negro */
 }
 
-.columna-izquierda {
-    width: 40%;
-
-}
-
-.columna-izquierda .especificaciones {
-    width: 100%;
-}
-
-.columna-derecha {
-    width: 55%;
-    margin: 20px;
-    flex: 1;
-}
-
-/*  imagen del producto */
-.columna-izquierda img {
-    width: 700px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    padding: 5px;
-    border-radius: 20px;
-    max-width: 100%;
-}
-
-/*  selectores de color y capacidad */
-.columna-izquierda select {
-    margin-top: 10px;
-    padding: 8px;
-}
-
-/* Estilo para el título, descripción y precio del producto */
-.columna-derecha h2,
-.columna-derecha p,
-.columna-derecha .precio {
-    color: #333;
-}
-
-.columna-derecha .precio {
-    font-size: 20px;
-    color: rgb(0, 0, 0);
-}
-
-.add-to-cart,
-.buy-now-button {
-    display: inline-block;
-    padding: 10px 20px;
-    margin-top: 20px;
-    text-decoration: none;
-    color: #ffffff;
-    background-color: #333333;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-}
-
-.add-to-cart:hover,
-.buy-now-button:hover {
-    background-color: #1bbd36;
-}
-
-/* Estilo para el contenido adicional sobre el producto */
-.content-container {
-    margin: 20px;
-}
-
-/* secciones de características y opiniones */
-.content-container section {
-    margin-bottom: 30px;
-}
-
-.content-container h2,
-.content-container ul {
-    color: #333;
-}
-
-/*  listas de características */
-.content-container ul {
-    list-style-type: disc;
-    margin-left: 20px;
+/* Cambia el color del texto a blanco */
+.carousel-control-prev,
+.carousel-control-next {
+  color: #000000;
 }
