Estoy cambiando la estructura css por boostrap y añadiendo mas contenido

--- a/src/app/componentes/catalogo/moviles/moviles.component.html
+++ b/src/app/componentes/catalogo/moviles/moviles.component.html
@@ -190,19 +190,26 @@
       <!-- Producto 1 -->
       <div class="col-lg-4 col-md-6">
         <div class="producto">
-            <img src="assets/img/producto4.jpg" class="img-fluid" alt="Producto 2">
-            <h3>Impresora 3D</h3>
-            <p class="precio">$699.99</p>
-            <a href="/carrito" class="btn-comprar">Comprar Ahora</a>
+          <img src="assets/img/producto4.jpg" class="img-fluid" alt="Producto 2">
+          <h3>Impresora 3D</h3>
+          <p class="precio">$699.99</p>
+          <div class="d-flex justify-content-between">
+            <a href="/impresora" class="ver-mas">Ver más</a>
+            <a href="/carrito" class="btn btn-success btn-sm">Comprar Ahora</a>
+          </div>
         </div>
-    </div>
+      </div>
+      
       <!-- Producto 2 -->
       <div class="col-lg-4 col-md-6">
         <div class="producto">
           <img src="assets/img/producto3.jpg" class="img-fluid" alt="Producto 3">
           <h3>Gafas VR</h3>
           <p class="precio">$499.99</p>
-          <a href="/carrito" class="btn-comprar">Comprar Ahora</a>
+          <div class="d-flex justify-content-between">
+            <a href="/gafas" class="ver-mas">Ver más</a>
+            <a href="/carrito" class="btn btn-success btn-sm">Comprar Ahora</a>
+          </div>
         </div>
       </div>
 
@@ -212,7 +219,10 @@
           <img src="assets/img/producto1.jpg" class="img-fluid" alt="Producto 4">
           <h3>Relojes</h3>
           <p class="precio">$499.99</p>
-          <a href="/carrito" class="btn-comprar">Comprar Ahora</a>
+          <div class="d-flex justify-content-between">
+            <a href="/relojes" class="ver-mas">Ver más</a>
+            <a href="/carrito" class="btn btn-success btn-sm">Comprar Ahora</a>
+          </div>
         </div>
       </div>
 
