--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -64,86 +64,104 @@
     </div>
   </section>
   <!-- End Hero -->
-  <section id="services" class="services section-bg">
-    <div class="container">
 
-        <div class="row">
-            <!-- Primera fila de tarjetas -->
-            <div class="col-lg-4 col-md-6 mb-4" data-aos="zoom-in" data-aos-delay="100">
-                <div class="icon-box iconbox-blue">
-                    <img src="/assets/img/producto2.jpg" class="img-fluid" alt="Imagen 1">
-                    <h4><a href="/moviles">Móvil UltraTech</a></h4>
-                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p><br>
-                    <a href="/carrito" class="btn btn-success" >Comprar Ahora</a>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 mb-4" data-aos="zoom-in" data-aos-delay="200">
-              <div class="icon-box iconbox-blue">
-                <img src="/assets/img/producto3.jpg" class="img-fluid" alt="Imagen 1">
-                <h4><a href="/moviles">Gafas VR PS4</a></h4>
-                <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p><br>
-                <a href="/carrito" class="btn btn-success">Comprar Ahora</a>
-            </div>>
-            </div>
-        </div>
-        <!-- Fin de la primera fila -->
-        <div class="row">
-            <!-- Segunda fila de tarjetas -->
-
-            <div class="col-lg-4 col-md-6 mb-4" data-aos="zoom-in" data-aos-delay="300">
-                <div class="icon-box iconbox-pink">
-                    <img src="/assets/img/producto4.jpg" class="img-fluid" alt="Imagen 3">
-                    <h4><a href="">Magni Dolores</a></h4>
-                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p><br>
-                    <a href="/carrito" class="btn btn-success" >Comprar Ahora</a>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 mb-4" data-aos="zoom-in" data-aos-delay="100">
-                <div class="icon-box iconbox-yellow">
-                    <img src="/assets/img/producto1.jpg" class="img-fluid" alt="Imagen 4">
-                    <h4><a href="">Nemo Enim</a></h4>
-                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p><br>
-                    <a href="/carrito" class="btn btn-success" >Comprar Ahora</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- End Services Section -->
-      
-  <!-- ======= About Us Section ======= -->
-  <section id="about-us" class="about-us">
-    <div class="container" data-aos="fade-up">
-
-      <div class="row content">
-        
-        <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left">
+    <!-- ======= About Us Section ======= -->
+    <section id="about-us" class="about-us">
+      <div class="container" data-aos="fade-up">
+  
+        <div class="row content">
           
-            <div style="width: 80%; text-align: justify;">
-              <h2>QUIÉNES SOMOS</h2>
-              <p>
-                En ByteBazaar, somos tu acceso al futuro digital, ofreciendo una experiencia única en tecnología. Especializados en dispositivos de vanguardia como móviles, 
-                impresoras 3D, relojes inteligentes y gafas VR, proporcionamos las herramientas para explorar, crear y conectarte en el mundo digital.
-              </p>
-              <h3>NUESTROS OBJETIVOS</h3>
-              <ul>
-                <li><i class="ri-check-double-line"></i>Innovación Constante: En ByteBazaar, nos comprometemos a liderar la tecnología con productos que integren las últimas innovaciones del mercado.</li>
-                <li><i class="ri-check-double-line"></i> Experiencia del Cliente: Desde tu primera búsqueda hasta la entrega, nos dedicamos a brindarte una experiencia de compra excepcional, priorizando tu satisfacción.</li>
-                <li><i class="ri-check-double-line"></i> Facilitar tu Conexión Digital: Somos tu aliado en el mundo digital, ofreciéndote herramientas que simplifican tu exploración, creación y conexión en la era tecnológica.</li>
-              </ul>
-            </div>
-          
-         
+          <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left">
+            
+              <div style="width: 80%; text-align: justify;">
+                <h2>QUIÉNES SOMOS</h2>
+                <p>
+                  En ByteBazaar, somos tu acceso al futuro digital, ofreciendo una experiencia única en tecnología. Especializados en dispositivos de vanguardia como móviles, 
+                  impresoras 3D, relojes inteligentes y gafas VR, proporcionamos las herramientas para explorar, crear y conectarte en el mundo digital.
+                </p>
+                <h3>NUESTROS OBJETIVOS</h3>
+                <ul>
+                  <li><i class="ri-check-double-line"></i>Innovación Constante: En ByteBazaar, nos comprometemos a liderar la tecnología con productos que integren las últimas innovaciones del mercado.</li>
+                  <li><i class="ri-check-double-line"></i> Experiencia del Cliente: Desde tu primera búsqueda hasta la entrega, nos dedicamos a brindarte una experiencia de compra excepcional, priorizando tu satisfacción.</li>
+                  <li><i class="ri-check-double-line"></i> Facilitar tu Conexión Digital: Somos tu aliado en el mundo digital, ofreciéndote herramientas que simplifican tu exploración, creación y conexión en la era tecnológica.</li>
+                </ul>
+              </div>
+            
+           
+          </div>
+          <div class="col-lg-6" data-aos="fade-right">
+            <img src="/assets/img/tienda.jpg" class="img-fluid mb-3" style="max-width: 80%;" alt="Descripción de la imagen">
+            <img src="/assets/img/tienda2.jpg" class="img-fluid" style="max-width: 80%;" alt="Descripción de la imagen">
+          </div>
         </div>
-        <div class="col-lg-6" data-aos="fade-right">
-          <img src="/assets/img/tienda.jpg" class="img-fluid mb-3" style="max-width: 80%;" alt="Descripción de la imagen">
-          <img src="/assets/img/tienda2.jpg" class="img-fluid" style="max-width: 80%;" alt="Descripción de la imagen">
+  
+      </div>
+    </section><!-- End About Us Section -->
+    <section id="productos-relacionados" class="productos-relacionados">
+      <div class="container">
+        <div class="section-title" data-aos="fade-up">
+          <h2>Productos Destacados</h2>
+          
+        </div>
+    
+        <div class="row" data-aos="fade-up" data-aos-delay="100">
+    
+          <!-- Producto 1 -->
+          <div class="col-lg-6 col-md-6 mb-4">
+            <div class="producto">
+              <img src="assets/img/producto4.jpg" class="img-fluid" alt="Producto 2">
+              <h3>Impresora 3D</h3>
+              <p class="precio">$699.99</p>
+              <div class="d-flex justify-content-between">
+                <a href="/impresora" class="ver-mas">Ver más</a>
+                <a href="/carrito" class="btn btn-success btn-sm">Comprar Ahora</a>
+              </div>
+            </div>
+          </div>
+          
+          <!-- Producto 2 -->
+          <div class="col-lg-6 col-md-6 mb-4">
+            <div class="producto">
+              <img src="assets/img/producto3.jpg" class="img-fluid" alt="Producto 3">
+              <h3>Gafas VR</h3>
+              <p class="precio">$499.99</p>
+              <div class="d-flex justify-content-between">
+                <a href="/gafas" class="ver-mas">Ver más</a>
+                <a href="/carrito" class="btn btn-success btn-sm">Comprar Ahora</a>
+              </div>
+            </div>
+          </div>
+    
+          <!-- Producto 3 -->
+          <div class="col-lg-6 col-md-6 mb-4">
+            <div class="producto">
+              <img src="assets/img/producto1.jpg" class="img-fluid" alt="Producto 4">
+              <h3>Relojes</h3>
+              <p class="precio">$499.99</p>
+              <div class="d-flex justify-content-between">
+                <a href="/relojes" class="ver-mas">Ver más</a>
+                <a href="/carrito" class="btn btn-success btn-sm">Comprar Ahora</a>
+              </div>
+            </div>
+          </div>
+    
+          <!-- Producto 4 -->
+          <div class="col-lg-6 col-md-6 mb-4">
+            <div class="producto">
+              <img src="assets/img/producto2.jpg" class="img-fluid" alt="Producto 5">
+              <h3>Auriculares</h3>
+              <p class="precio">$299.99</p>
+              <div class="d-flex justify-content-between">
+                <a href="/auriculares" class="ver-mas">Ver más</a>
+                <a href="/carrito" class="btn btn-success btn-sm">Comprar Ahora</a>
+              </div>
+            </div>
+          </div>
+    
         </div>
       </div>
+    </section>
+      
 
-    </div>
-  </section><!-- End About Us Section -->
 
   
