--- a/src/app/componentes/not-found/not-found.component.html
+++ b/src/app/componentes/not-found/not-found.component.html
@@ -1,1 +1,13 @@
-<p>not-found works!</p>
+<title>Error 404 - Página no encontrada</title>
+<!-- Bootstrap CSS -->
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
+<body>
+<div class="container">
+  <div class="text-center mt-5">
+    <h1 class="display-4">Error 404</h1>
+    <p class="lead">Página no encontrada</p>
+    <p>Lo sentimos, la página que estás buscando no se encuentra.</p>
+    <a href="/" class="btn btn-success">Volver a la página principal</a>
+  </div>
+</div>
